--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -150,15 +150,17 @@
             <TabItem Header="后勤" Name ="TabItemOperation" HorizontalAlignment="Left" Width="43" Margin="703,4,-703,-4">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="907*"/>
+                        <ColumnDefinition Width="218*"/>
+                        <ColumnDefinition Width="16*"/>
+                        <ColumnDefinition Width="673*"/>
                         <ColumnDefinition Width="41*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Height="25" Margin="32,22,0,0" TextWrapping="Wrap" Text="选择梯队:" VerticalAlignment="Top" Width="171" FontSize="16"/>
-                    <ComboBox x:Name="comboBoxOperationTeam" HorizontalAlignment="Left" Height="25" Margin="112,20,0,0" VerticalAlignment="Top" Width="146"/>
+                    <ComboBox x:Name="comboBoxOperationTeam" HorizontalAlignment="Left" Height="25" Margin="112,20,0,0" VerticalAlignment="Top" Width="146" Grid.ColumnSpan="3"/>
                     <TextBlock x:Name="textBlock2_Copy" HorizontalAlignment="Left" Height="25" Margin="32,58,0,0" TextWrapping="Wrap" Text="选择后勤:" VerticalAlignment="Top" Width="161" FontSize="16"/>
-                    <ComboBox x:Name="comboBoxOperation" HorizontalAlignment="Left" Height="25" Margin="112,56,0,0" VerticalAlignment="Top" Width="146"/>
+                    <ComboBox x:Name="comboBoxOperation" HorizontalAlignment="Left" Height="25" Margin="112,56,0,0" VerticalAlignment="Top" Width="146" Grid.ColumnSpan="3"/>
                     <Button x:Name="buttonStartOperation" Content="开始后勤" HorizontalAlignment="Left" Height="32" Margin="45,0,0,256" VerticalAlignment="Bottom" Width="81" Click="button_Click_1"/>
-                    <ListView x:Name="listViewOperation" HorizontalAlignment="Left" Height="386" Margin="334,10,0,0" VerticalAlignment="Top" Width="604" SelectionChanged="listViewOperation_SelectionChanged" Grid.ColumnSpan="2">
+                    <ListView x:Name="listViewOperation" HorizontalAlignment="Left" Height="386" Margin="100,10,0,0" VerticalAlignment="Top" Width="604" SelectionChanged="listViewOperation_SelectionChanged" Grid.ColumnSpan="2" Grid.Column="2">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="远征名" Width="200" DisplayMemberBinding="{Binding Path=OperationName}"></GridViewColumn>
@@ -167,8 +169,8 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <CheckBox x:Name="checkBoxAutoOperation" Content="自动重新开始后勤" HorizontalAlignment="Left" Height="16" Margin="178,128,0,0" VerticalAlignment="Top" Width="121" Click="checkBox_Checked"/>
-                    <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Height="238" Margin="3,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326" Text="说明：&#x0a;    谨慎使用，可能有封号危险&#x0a;    因为懒所以没有写后勤条件的检查，所以请自己看好是否能够进行远征再自此添加。&#x0a;    本功能还属于测试，所以可能会有很多bug，请提交给我。&#x0a;    此页面加载完成之后，就可以退出游戏，之后会自动进行后勤。&#x0a;    时间修正大概写完了，顺带一提，勾选自动重新开始后勤之后推荐关闭游戏，以防游戏与本功能同时发送结束后勤请求"/>
+                    <CheckBox x:Name="checkBoxAutoOperation" Content="自动重新开始后勤" HorizontalAlignment="Left" Height="16" Margin="178,128,0,0" VerticalAlignment="Top" Width="121" Click="checkBox_Checked" Grid.ColumnSpan="3"/>
+                    <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Height="238" Margin="3,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326" Text="说明：&#x0a;    谨慎使用，可能有封号危险&#x0a;    因为懒所以没有写后勤条件的检查，所以请自己看好是否能够进行远征再自此添加。&#x0a;    本功能还属于测试，所以可能会有很多bug，请提交给我。&#x0a;    此页面加载完成之后，就可以退出游戏，之后会自动进行后勤。&#x0a;    时间修正大概写完了，顺带一提，勾选自动重新开始后勤之后推荐关闭游戏，以防游戏与本功能同时发送结束后勤请求" Grid.ColumnSpan="3"/>
                 </Grid>
             </TabItem>
             <TabItem Header="装备建造" Margin="-112,4,108,-5">
@@ -256,7 +258,7 @@
                                     <TextBlock x:Name="operation_time1" Height="57" Margin="445,14,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top" Width="200" FontSize="48" TextAlignment="Left" HorizontalAlignment="Left"/>
                                     <ComboBox x:Name="comboBoxOperationTeam1" VerticalAlignment="Top" Width="164" Margin="60,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
                                     <ComboBox x:Name="comboBoxOperation1" VerticalAlignment="Top" Width="164" Margin="255,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" SelectionChanged="comboBoxOperation1_SelectionChanged"/>
-                                    <Button x:Name="AutoOperationB_S1" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold"/>
+                                    <Button x:Name="AutoOperationB_S1" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold" Click="AutoOperationB_S1_Click"/>
                                 </Grid>
                             </GroupBox>
                             <GroupBox x:Name="groupBox2_Copy14" Header="后勤任务" HorizontalAlignment="Left" Height="85" Margin="25,100,0,0" VerticalAlignment="Top" Width="912">
@@ -264,7 +266,7 @@
                                     <TextBlock x:Name="operation_time2" HorizontalAlignment="Left" Height="57" Margin="445,12,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top" Width="200" FontSize="48" TextAlignment="Left"/>
                                     <ComboBox x:Name="comboBoxOperation2" VerticalAlignment="Top" Width="164" Margin="255,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
                                     <ComboBox x:Name="comboBoxOperationTeam2" VerticalAlignment="Top" Width="164" Margin="60,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
-                                    <Button x:Name="AutoOperationB_S2" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold"/>
+                                    <Button x:Name="AutoOperationB_S2" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold" Click="AutoOperationB_S2_Click"/>
                                 </Grid>
                             </GroupBox>
                         </Grid>
@@ -275,7 +277,7 @@
                             <TextBlock x:Name="operation_time3" HorizontalAlignment="Left" Height="57" Margin="445,12,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top" Width="200" FontSize="48" TextAlignment="Left"/>
                             <ComboBox x:Name="comboBoxOperation3" VerticalAlignment="Top" Width="164" Margin="255,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
                             <ComboBox x:Name="comboBoxOperationTeam3" VerticalAlignment="Top" Width="164" Margin="60,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
-                            <Button x:Name="AutoOperationB_S3" Content="开始循环" HorizontalAlignment="Left" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold" Margin="650,25,0,0"/>
+                            <Button x:Name="AutoOperationB_S3" Content="开始循环" HorizontalAlignment="Left" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold" Margin="650,25,0,0" Click="AutoOperationB_S3_Click"/>
                         </Grid>
                     </GroupBox>
                     <GroupBox x:Name="groupBox2_Copy16" Header="后勤任务" HorizontalAlignment="Left" Height="85" Margin="25,300,0,0" VerticalAlignment="Top" Width="912">
@@ -283,7 +285,7 @@
                             <TextBlock x:Name="operation_time4" HorizontalAlignment="Left" Height="57" Margin="445,12,0,0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Top" Width="200" FontSize="48" TextAlignment="Left"/>
                             <ComboBox x:Name="comboBoxOperation4" VerticalAlignment="Top" Width="164" Margin="255,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
                             <ComboBox x:Name="comboBoxOperationTeam4" VerticalAlignment="Top" Width="164" Margin="60,25,0,0" Height="36" HorizontalAlignment="Left" FontSize="18"/>
-                            <Button x:Name="AutoOperationB_S4" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold"/>
+                            <Button x:Name="AutoOperationB_S4" Content="开始循环" HorizontalAlignment="Left" Margin="650,25,0,0" VerticalAlignment="Top" Width="119" Height="36" FontSize="20" FontWeight="Bold" Click="AutoOperationB_S4_Click"/>
                         </Grid>
                     </GroupBox>
 
