--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -65,7 +65,7 @@
                             <TextBlock x:Name="textFixSlot" HorizontalAlignment="Left" Height="14" Margin="111,37,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="110"/>
                         </Grid>
                     </GroupBox>
-                    <Button Content="登陆" HorizontalAlignment="Left" Margin="21,181,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+                    <Button x:Name="Login" Content="登陆" HorizontalAlignment="Left" Margin="75,328,0,0" VerticalAlignment="Top" Width="50" Click="Button_Click_2" IsEnabled="False" Height="50"/>
                     <TextBox x:Name="textbox1" HorizontalAlignment="Left" Height="23" Margin="456,218,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
                     <Label x:Name="Label1" Content="Label" HorizontalAlignment="Left" Margin="21,258,0,0" VerticalAlignment="Top" Width="927" Height="60"/>
                     <Button Content="解密" HorizontalAlignment="Left" Margin="590,246,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
@@ -73,8 +73,7 @@
                     <Button x:Name="button1" Content="yundoudou" HorizontalAlignment="Left" Margin="590,222,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
                     <TextBox x:Name="textbox2" HorizontalAlignment="Left" Height="23" Margin="446,268,0,0" TextWrapping="Wrap" Text="singn" VerticalAlignment="Top" Width="120"/>
                     <Button Content="后勤test" HorizontalAlignment="Left" Margin="21,219,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
-                    <Button x:Name="CheckT" Content="初始化" HorizontalAlignment="Left" Margin="126,197,0,0" VerticalAlignment="Top" Width="75" Click="CheckT_Click"/>
-                    <Button x:Name="count1s" Content="Button" HorizontalAlignment="Left" Margin="366,186,0,0" VerticalAlignment="Top" Width="75" Click="count1s_Click"/>
+                    <Button x:Name="CheckT" Content="初始化" HorizontalAlignment="Left" Margin="20,328,0,0" VerticalAlignment="Top" Width="50" Click="CheckT_Click" Height="50"/>
                 </Grid>
             </TabItem>
             <TabItem Header="梯队" Margin="127,4,-131,-3" Visibility="Hidden">
