--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -123,6 +123,8 @@
                         </Grid>
                     </GroupBox>
                     <Button Content="Button" HorizontalAlignment="Left" Margin="358,229,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
+                    <Label x:Name="BP_RecoverTime" Content="BP_RecoverTime" HorizontalAlignment="Left" Margin="254,228,0,0" VerticalAlignment="Top"/>
+                    <Button Content="好友&#xD;&#xA;电池" HorizontalAlignment="Left" Margin="130,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6"/>
                 </Grid>
             </TabItem>
             <TabItem Header="人形建造" Margin="-2,4,-2,-5">
