--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -259,7 +259,52 @@
                 </Grid>
             </TabItem>
             <TabItem Header="战斗" Margin="4,4,-32,-6">
-                <Grid Background="#FFE5E5E5" Margin="-5,0,-6,-3"/>
+                <Grid Background="#FFE5E5E5" Margin="-5,0,-6,-3">
+                    <TabControl HorizontalAlignment="Left" Height="403" VerticalAlignment="Top" Width="969" Margin="-9,0,-1,0">
+                        <TabItem Header="Task1" Width="60" Height="22" Margin="9,-2,-11,0">
+                            <Grid Background="#FFE5E5E5" Margin="0,-4" HorizontalAlignment="Right" Width="963">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="146*"/>
+                                    <ColumnDefinition Width="679*"/>
+                                </Grid.ColumnDefinitions>
+                                <GroupBox Header="升级选项" HorizontalAlignment="Left" Height="143" Margin="564,10,0,0" VerticalAlignment="Top" Width="210" Grid.Column="1">
+                                    <ComboBox x:Name="UpgradeEquipType" HorizontalAlignment="Left" Height="24" Margin="98,25,0,0" VerticalAlignment="Top" Width="96"/>
+                                </GroupBox>
+                                <Label Content="地图 :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="24"/>
+                                <ComboBox x:Name="Task1Map" VerticalAlignment="Top" Width="164" Margin="86,14,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.ColumnSpan="2">
+                                    <ComboBoxItem Content="5-2N"/>
+                                </ComboBox>
+                                <Label Content="主梯队 :" HorizontalAlignment="Left" Margin="87,10,0,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1"/>
+                                <Label Content="辅梯队 :" HorizontalAlignment="Left" Margin="87,51,0,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1"/>
+                                <ComboBox x:Name="Task1MT" VerticalAlignment="Top" Width="164" Margin="187,14,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.Column="1" SelectionChanged="Task1MT_SelectionChanged"/>
+                                <ComboBox x:Name="Task1ST1" VerticalAlignment="Top" Width="164" Margin="187,55,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.Column="1"/>
+                                <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="699,352,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
+                                <Grid Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="98" Margin="10,55,0,0" VerticalAlignment="Top" Width="719">
+                                    <Label x:Name="GUN_1_name" Content="GUN_1" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Height="37" Width="100" FontSize="24"/>
+                                    <TextBox x:Name="GUN_1E" HorizontalAlignment="Left" Height="20" Margin="115,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" BorderThickness="0" Background="{x:Null}"/>
+                                    <Label x:Name="GUN_2_name" Content="GUN_2" HorizontalAlignment="Left" Margin="150,50,0,0" VerticalAlignment="Top" Height="37" Width="100" FontSize="24"/>
+                                    <TextBox x:Name="GUN_2E" HorizontalAlignment="Left" Height="20" Margin="260,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" BorderThickness="0" Background="{x:Null}"/>
+                                    <Label x:Name="GUN_3_name" Content="GUN_3" HorizontalAlignment="Left" Margin="295,50,0,0" VerticalAlignment="Top" Height="37" Width="100" FontSize="24"/>
+                                    <TextBox x:Name="GUN_3E" HorizontalAlignment="Left" Height="20" Margin="405,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" BorderThickness="0" Background="{x:Null}"/>
+                                    <Label x:Name="GUN_4_name" Content="GUN_4" HorizontalAlignment="Left" Margin="440,50,0,0" VerticalAlignment="Top" Height="37" Width="100" FontSize="24"/>
+                                    <TextBox x:Name="GUN_4E" HorizontalAlignment="Left" Height="20" Margin="540,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" BorderThickness="0" Background="{x:Null}"/>
+                                    <Label x:Name="GUN_5_name" Content="GUN_5" HorizontalAlignment="Left" Margin="574,50,0,0" VerticalAlignment="Top" Height="37" Width="100" FontSize="24"/>
+                                    <TextBox x:Name="GUN_5E" HorizontalAlignment="Left" Height="20" Margin="674,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" BorderThickness="0" Background="{x:Null}"/>
+                                    <Label Content="总效能：" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" FontSize="24"/>
+                                </Grid>
+                                <TextBox x:Name="Task1TeamE" HorizontalAlignment="Left" Height="40" Margin="113,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" Grid.ColumnSpan="2" TextAlignment="Center" FontSize="24" BorderThickness="0" Background="{x:Null}"/>
+                                <RadioButton x:Name="GUN1_MVP" Content="MVP" HorizontalAlignment="Left" Margin="125,107,0,0" VerticalAlignment="Top" FontSize="10"/>
+                                <RadioButton x:Name="GUN2_MVP" Content="MVP" HorizontalAlignment="Left" Margin="99,107,0,0" VerticalAlignment="Top" FontSize="10" Grid.Column="1"/>
+                                <RadioButton x:Name="GUN3_MVP" Content="MVP" HorizontalAlignment="Left" Margin="245,107,0,0" VerticalAlignment="Top" FontSize="10" Grid.Column="1"/>
+                                <RadioButton x:Name="GUN4_MVP" Content="MVP" HorizontalAlignment="Left" Margin="380,107,0,0" VerticalAlignment="Top" FontSize="10" Grid.Column="1"/>
+                                <RadioButton x:Name="GUN5_MVP" Content="MVP" HorizontalAlignment="Left" Margin="517,107,0,0" VerticalAlignment="Top" FontSize="10" Grid.Column="1"/>
+                            </Grid>
+                        </TabItem>
+                        <TabItem Header="Task2" Margin="10,-2,-10,0" Width="60" Height="22">
+                            <Grid Background="#FFE5E5E5" Margin="0,-3"/>
+                        </TabItem>
+                    </TabControl>
+                </Grid>
             </TabItem>
             <TabItem Header="装备建造" Margin="31,4,-35,-5">
                 <Grid Background="#FFE5E5E5" Margin="-6,0,-2,-2">
