--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -17,8 +17,13 @@
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="427" VerticalAlignment="Top" Width="954" SelectionChanged="tabControl_SelectionChanged" Margin="3,-5,-3,0" Background="#FFE5E5E5" Grid.Column="1">
             <TabItem Header="信息一览" Margin="-5,4,1,-4">
                 <Grid Background="#FFE5E5E5" Margin="-6,0,-4,-2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="25*"/>
+                        <ColumnDefinition Width="367*"/>
+                        <ColumnDefinition Width="566*"/>
+                    </Grid.ColumnDefinitions>
 
-                    <Grid Name="GirdResources" HorizontalAlignment="Left" Height="49" Margin="187,7,0,0" VerticalAlignment="Top" Width="761">
+                    <Grid Name="GirdResources" HorizontalAlignment="Left" Height="49" Margin="162,7,0,0" VerticalAlignment="Top" Width="761" Grid.ColumnSpan="2" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="13*"/>
                             <RowDefinition Height="21*"/>
@@ -53,11 +58,11 @@
                         <TextBlock x:Name="textExchange_CoinNum" HorizontalAlignment="Left" Height="13" Margin="710,9,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="51" Grid.Row="1"/>
                         <TextBlock x:Name="coretem3" HorizontalAlignment="Left" Height="16" Margin="287,1,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="55" Grid.RowSpan="2"/>
                     </Grid>
-                    <Grid Name ="GirdUserInfo" HorizontalAlignment="Left" Height="38" Margin="3,8,0,0" VerticalAlignment="Top" Width="184">
+                    <Grid Name ="GirdUserInfo" HorizontalAlignment="Left" Height="38" Margin="3,8,0,0" VerticalAlignment="Top" Width="184" Grid.ColumnSpan="2">
                         <TextBlock x:Name="UserName" Height="38" TextWrapping="Wrap" Text="指挥官名称" Margin="0,0,47,-3" FontSize="24" VerticalAlignment="Bottom" TextAlignment="Right"/>
                         <TextBlock x:Name="UserLevel" Height="18" Margin="146,0,-8,3" TextWrapping="Wrap" Text="等级" VerticalAlignment="Bottom" TextAlignment="Left"/>
                     </Grid>
-                    <GroupBox x:Name="groupBox" Header="枪娘信息" HorizontalAlignment="Left" Height="96" Margin="21,56,0,0" VerticalAlignment="Top" Width="161">
+                    <GroupBox x:Name="groupBox" Header="枪娘信息" HorizontalAlignment="Left" Height="96" Margin="21,56,0,0" VerticalAlignment="Top" Width="161" Grid.ColumnSpan="2">
                         <Grid HorizontalAlignment="Left" Height="164" Margin="-6,0,-6,-6" VerticalAlignment="Top" Width="237">
                             <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Height="16" Margin="10,10,0,0" TextWrapping="Wrap" Text="战术人形拥有数: " VerticalAlignment="Top" Width="96"/>
                             <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Height="16" Margin="10,31,0,0" TextWrapping="Wrap" Text="梯队待命数: " VerticalAlignment="Top" Width="96"/>
@@ -67,7 +72,7 @@
                             <TextBlock x:Name="textTeamNum" HorizontalAlignment="Left" Height="14" Margin="100,31,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="110"/>
                         </Grid>
                     </GroupBox>
-                    <GroupBox x:Name="groupBox1" Header="工厂信息" HorizontalAlignment="Left" Height="96" Margin="185,56,0,0" VerticalAlignment="Top" Width="141">
+                    <GroupBox x:Name="groupBox1" Header="工厂信息" HorizontalAlignment="Left" Height="96" Margin="160,56,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1">
                         <Grid HorizontalAlignment="Left" Height="86" Margin="12,-6,-105,-6" VerticalAlignment="Top" Width="222">
                             <TextBlock x:Name="textBlock1_Copy2" HorizontalAlignment="Left" Height="16" Margin="0,16,0,0" TextWrapping="Wrap" Text="建造位置数: " VerticalAlignment="Top" Width="96"/>
                             <TextBlock x:Name="textBlock1_Copy3" HorizontalAlignment="Left" Height="16" Margin="0,37,0,0" TextWrapping="Wrap" Text="修理位置数:" VerticalAlignment="Top" Width="96"/>
@@ -77,16 +82,9 @@
                             <TextBlock x:Name="textFixSlot" HorizontalAlignment="Left" Height="14" Margin="80,37,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="110"/>
                         </Grid>
                     </GroupBox>
-                    <Button x:Name="Login" Content="登陆" HorizontalAlignment="Left" Margin="75,328,0,0" VerticalAlignment="Top" Width="50" Click="Button_Click_2" IsEnabled="False" Height="50"/>
-                    <TextBox x:Name="textbox1" HorizontalAlignment="Left" Height="23" Margin="456,218,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-                    <Label x:Name="Label1" Content="Label" HorizontalAlignment="Left" Margin="21,258,0,0" VerticalAlignment="Top" Width="927" Height="60"/>
-                    <Button Content="解密" HorizontalAlignment="Left" Margin="590,246,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
-                    <Button x:Name="getuserinfo" Content="getuserinfo" HorizontalAlignment="Left" Margin="21,200,0,0" VerticalAlignment="Top" Width="75" Click="getuserinfo_Click"/>
-                    <Button x:Name="button1" Content="yundoudou" HorizontalAlignment="Left" Margin="590,222,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
-                    <TextBox x:Name="textbox2" HorizontalAlignment="Left" Height="23" Margin="446,268,0,0" TextWrapping="Wrap" Text="singn" VerticalAlignment="Top" Width="120"/>
-                    <Button Content="后勤test" HorizontalAlignment="Left" Margin="21,219,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
-                    <Button x:Name="CheckT" Content="初始化" HorizontalAlignment="Left" Margin="20,328,0,0" VerticalAlignment="Top" Width="50" Click="CheckT_Click" Height="50"/>
-                    <GroupBox x:Name="groupBox5" Header="格琳娜信息" HorizontalAlignment="Left" Height="96" Margin="328,56,0,0" VerticalAlignment="Top" Width="113">
+                    <Button x:Name="Login" Content="登陆" HorizontalAlignment="Left" Margin="50,328,0,0" VerticalAlignment="Top" Width="50" Click="Button_Click_2" IsEnabled="False" Height="50" Grid.Column="1"/>
+                    <Button x:Name="CheckT" Content="初始化" HorizontalAlignment="Left" Margin="20,328,0,0" VerticalAlignment="Top" Width="50" Click="CheckT_Click" Height="50" Grid.ColumnSpan="2"/>
+                    <GroupBox x:Name="groupBox5" Header="格琳娜信息" HorizontalAlignment="Left" Height="96" Margin="303,56,0,0" VerticalAlignment="Top" Width="113" Grid.ColumnSpan="2" Grid.Column="1">
                         <Grid HorizontalAlignment="Left" Height="86" Margin="9,-6,-45,-6" VerticalAlignment="Top" Width="137">
                             <TextBlock x:Name="textBlock4" HorizontalAlignment="Left" Height="16" Margin="0,16,0,0" TextWrapping="Wrap" Text="等级 " VerticalAlignment="Top" Width="40"/>
                             <TextBlock x:Name="textBlock5" HorizontalAlignment="Left" Height="16" Margin="0,37,0,0" TextWrapping="Wrap" Text="好感度:" VerticalAlignment="Top" Width="40"/>
@@ -94,7 +92,7 @@
                             <TextBlock x:Name="textFixSlot1" HorizontalAlignment="Left" Height="14" Margin="44,37,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="55"/>
                         </Grid>
                     </GroupBox>
-                    <GroupBox x:Name="groupBox6" Header="装备信息" HorizontalAlignment="Left" Height="96" Margin="444,56,0,0" VerticalAlignment="Top" Width="145">
+                    <GroupBox x:Name="groupBox6" Header="装备信息" HorizontalAlignment="Left" Height="96" Margin="52,56,0,0" VerticalAlignment="Top" Width="145" Grid.Column="2">
                         <Grid HorizontalAlignment="Left" Height="164" Margin="-6,0,-6,-6" VerticalAlignment="Top" Width="237">
                             <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Height="16" Margin="10,10,0,0" TextWrapping="Wrap" Text="装备拥有数: " VerticalAlignment="Top" Width="65"/>
                             <TextBlock x:Name="textBlock1_Copy5" HorizontalAlignment="Left" Height="16" Margin="10,31,0,0" TextWrapping="Wrap" Text="五级装备数: " VerticalAlignment="Top" Width="65"/>
@@ -104,7 +102,7 @@
                             <TextBlock x:Name="textEquipBuiltNum" HorizontalAlignment="Left" Height="14" Margin="90,52,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="37"/>
                         </Grid>
                     </GroupBox>
-                    <GroupBox x:Name="groupBox7" Header="好友信息" HorizontalAlignment="Left" Height="96" Margin="592,56,0,0" VerticalAlignment="Top" Width="124">
+                    <GroupBox x:Name="groupBox7" Header="好友信息" HorizontalAlignment="Left" Height="96" Margin="200,56,0,0" VerticalAlignment="Top" Width="124" Grid.Column="2">
                         <Grid HorizontalAlignment="Left" Height="164" Margin="-6,0,-6,-6" VerticalAlignment="Top" Width="237">
                             <TextBlock x:Name="textBlock7" HorizontalAlignment="Left" Height="16" Margin="10,10,0,0" TextWrapping="Wrap" Text="好友拥有数: " VerticalAlignment="Top" Width="65"/>
                             <TextBlock x:Name="textBlock1_Copy6" HorizontalAlignment="Left" Height="16" Margin="10,31,0,0" TextWrapping="Wrap" Text="平均等级: " VerticalAlignment="Top" Width="65"/>
@@ -112,7 +110,7 @@
                             <TextBlock x:Name="textFriendLv" HorizontalAlignment="Left" Height="14" Margin="80,31,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="37"/>
                         </Grid>
                     </GroupBox>
-                    <GroupBox x:Name="groupBox7_Copy" Header="研发信息" HorizontalAlignment="Left" Height="96" Margin="722,56,0,0" VerticalAlignment="Top" Width="100">
+                    <GroupBox x:Name="groupBox7_Copy" Header="研发信息" HorizontalAlignment="Left" Height="96" Margin="330,56,0,0" VerticalAlignment="Top" Width="100" Grid.Column="2">
                         <Grid HorizontalAlignment="Left" Height="164" Margin="-6,0,-6,-6" VerticalAlignment="Top" Width="237">
                             <TextBlock x:Name="textBlock8" HorizontalAlignment="Left" Height="16" Margin="10,10,0,0" TextWrapping="Wrap" Text="初级: " VerticalAlignment="Top" Width="30"/>
                             <TextBlock x:Name="textBlock1_Copy7" HorizontalAlignment="Left" Height="16" Margin="10,31,0,0" TextWrapping="Wrap" Text="中级:" VerticalAlignment="Top" Width="30"/>
@@ -122,10 +120,8 @@
                             <TextBlock x:Name="textCoin3Num" HorizontalAlignment="Left" Height="14" Margin="40,52,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="60" RenderTransformOrigin="-1.054,0.571"/>
                         </Grid>
                     </GroupBox>
-                    <Button Content="Button" HorizontalAlignment="Left" Margin="358,229,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
-                    <Label x:Name="BP_RecoverTime" Content="BP_RecoverTime" HorizontalAlignment="Left" Margin="254,228,0,0" VerticalAlignment="Top"/>
-                    <Button Content="好友&#xD;&#xA;电池" HorizontalAlignment="Left" Margin="130,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6"/>
-                    <Button Content="好友&#xA;点赞" HorizontalAlignment="Left" Margin="185,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6"/>
+                    <Button Content="好友&#xD;&#xA;电池" HorizontalAlignment="Left" Margin="105,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6" Grid.Column="1"/>
+                    <Button Content="好友&#xA;点赞" HorizontalAlignment="Left" Margin="160,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6" Grid.Column="1"/>
                 </Grid>
             </TabItem>
             <TabItem Header="人形建造" Margin="-2,4,-2,-5">
@@ -447,8 +443,19 @@
 
                 </Grid>
             </TabItem>
+            <TabItem Margin="37,4,-41,-6" Header="解密调试">
+                <Grid HorizontalAlignment="Left" Height="207" Margin="36,74,0,0" VerticalAlignment="Top" Width="425">
+                    <Button Content="yundoudou" HorizontalAlignment="Left" Margin="135,6,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_8"/>
+                    <TextBox x:Name="textbox3" HorizontalAlignment="Left" Height="23" Margin="10,6,0,0" TextWrapping="Wrap" Text="sign" VerticalAlignment="Top" Width="120"/>
+                    <Button HorizontalAlignment="Left" Margin="215,6,0,0" VerticalAlignment="Top" Width="81" Click="Button_Click_9" Height="19" Content="解密"/>
+                    <TextBox x:Name="result_decoded" HorizontalAlignment="Left" Height="23" Margin="10,34,0,0" TextWrapping="Wrap" Text="密文" VerticalAlignment="Top" Width="120"/>
+                    <Label x:Name="label_sign" Content="sign" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="268"/>
+                    <Label x:Name="BP_RecoverTime" Content="BP_RecoverTime" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,174,0,0"/>
+                    <TextBox x:Name="TEXTBOX_outdatacode" HorizontalAlignment="Left" Height="23" Margin="10,92,0,0" TextWrapping="Wrap" Text="outdatacode" VerticalAlignment="Top" Width="120"/>
+                    <Button x:Name="POST" HorizontalAlignment="Left" Margin="135,96,0,0" VerticalAlignment="Top" Width="81" Height="19" Content="POST" Click="POST_Click"/>
+                </Grid>
+            </TabItem>
 
         </TabControl>
-        <Label Grid.ColumnSpan="2" Content="Label" HorizontalAlignment="Left" Height="100" Margin="274,504,0,-151" VerticalAlignment="Top"/>
     </Grid>
 </Window>
